迁移生成数据库

--- a/aspnet-core/src/Acme.Music.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/Acme.Music.HttpApi.Host/appsettings.json
@@ -3,7 +3,7 @@
     "CorsOrigins": "https://*.Music.com,http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Music;Trusted_Connection=True"
+    "Default": "Server=.;Database=Music;Uid=sa;Pwd=123456;"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
