--- a/aspnet-core/src/Acme.Music.DbMigrator/appsettings.json
+++ b/aspnet-core/src/Acme.Music.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Music;Trusted_Connection=True"
+    "Default": "Server=.;Database=Music;Uid=sa;Pwd=123456;"
   },
   "IdentityServer": {
     "Clients": {
