--- a/vite-vue/package.json
+++ b/vite-vue/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "npm run build && vite preview",
+    "preview:dist": "vite preview"
   },
   "dependencies": {
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "@vitejs/plugin-vue": "^2.3.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.0",
