--- a/aspnet-core/src/Acme.Music.HttpApi.Host/Properties/launchSettings.json
+++ b/aspnet-core/src/Acme.Music.HttpApi.Host/Properties/launchSettings.json
@@ -10,14 +10,14 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "Acme.Music.HttpApi.Host": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:44323",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
