--- a/aspnet-core/src/Acme.Music.IdentityServer/Acme.Music.IdentityServer.csproj
+++ b/aspnet-core/src/Acme.Music.IdentityServer/Acme.Music.IdentityServer.csproj
@@ -11,6 +11,7 @@
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     <MvcRazorExcludeRefAssembliesFromPublish>false</MvcRazorExcludeRefAssembliesFromPublish>
     <PreserveCompilationReferences>true</PreserveCompilationReferences>
+	<GenerateRuntimeConfigDevFile>true</GenerateRuntimeConfigDevFile>
     <UserSecretsId>Acme.Music-4681b4fd-151f-4221-84a4-929d86723e4c</UserSecretsId>
   </PropertyGroup>
 
