--- a/aspnet-core/src/Acme.Music.IdentityServer/appsettings.json
+++ b/aspnet-core/src/Acme.Music.IdentityServer/appsettings.json
@@ -6,7 +6,7 @@
     "RedirectAllowedUrls": "http://localhost:4200,https://localhost:44307"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Music;Trusted_Connection=True"
+    "Default": "Server=.;Database=Music;Uid=sa;Pwd=123456"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
