--- a/vite-vue/package.json
+++ b/vite-vue/package.json
@@ -9,7 +9,10 @@
     "preview:dist": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "axios": "^0.27.2",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.15",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
