--- a/vite-vue/package.json
+++ b/vite-vue/package.json
@@ -17,6 +17,8 @@
   "devDependencies": {
     "@types/node": "^17.0.23",
     "@vitejs/plugin-vue": "^2.3.0",
+    "less": "^4.1.2",
+    "less-loader": "^11.0.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.0",
     "vue-tsc": "^0.29.8"
