--- a/vite-vue/package.json
+++ b/vite-vue/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "vant": "^3.4.9",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15",
     "vuex": "^4.0.2"
@@ -21,6 +22,7 @@
     "less-loader": "^11.0.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.0",
+    "vite-plugin-style-import": "^1.4.1",
     "vue-tsc": "^0.29.8"
   }
 }
