封装图标为组件，并修改发布问题

--- a/vite-vue/tsconfig.json
+++ b/vite-vue/tsconfig.json
@@ -8,9 +8,13 @@
     "jsx": "preserve",
     "sourceMap": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "esModuleInterop": true,
-    "lib": ["esnext", "dom"]
+    "lib": ["esnext", "dom"],
+    "paths": {
+      "/@/*": ["./src/*"],     //格式一定要写对符号*不能少不然找不到@或者没有代码提示
+      "/%/*": ["./public/*"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
